# architecture-control-plane

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  REFACTOR_REPORT.md  REFACTOR_REPORT_PHASE11_COVERAGE.md  REFACTOR_REPORT_PHASE2.md  REFACTOR_REPORT_PHASE3.md  REFACTOR_REPORT_PHASE4.md  REFACTOR_REPORT_PHASE5.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  tsconfig.json  vitest.config.ts  workbench_inline_check.js  wrangler.jsonc
alembic/: __init__.py  command.py  config.py
app/: main.py
browser_e2e/: playwright.config.ts  workbench.remote-workspace.spec.ts  workbench.smoke.spec.ts  workbench.user-flows.spec.ts
db_migrations/: env.py
deploy/: tempo.yaml
docs/: ARCHITECTURE.md  BACKUP_RESTORE_DRILL.md  CLOUDFLARE_DEPLOYMENT.md  OPERATIONS_CHECKLIST.md  RELEASE_CHECKLIST.md  REMOTE_WORKSPACE_RUNTIME.md  SECRET_MANAGEMENT.md  STAGING_LIVE_SMOKE.md  TEST_STRATEGY.md
scripts/: docker_compose_smoke.sh  k8s_runtime_smoke.sh  live-smoke.mjs  load_remote_workspace_long_session.py  postgres_backup_restore.py  release_readiness.py  render_alert_rules.py  render_alertmanager_config.py  render_s3_lifecycle_policy.py  staging_live_smoke.py  webhook_sink.py
src/: index.ts  worker-runtime.d.ts
test/: support.ts
tests/: conftest.py  test_admin_ops.py  test_approvals_api.py  test_auth_and_observability.py  test_backup_restore_drill.py  test_concurrency_scenarios.py  test_coverage_expansion.py  test_cycle_service_structure.py  test_cycles_api.py  test_db_errors.py  test_db_session.py  test_execution_runtime.py  (+31 more)
(+257 files in other folders)
